--- a/index.html
+++ b/index.html
@@ -22,5 +22,10 @@ href="https://github.com/HAROLDOROZCO">https://github.com/HAROLDOROZCO</a>
 <iframe title="Relación Emisión CO2/Emisión per capita" aria-label="chart" id="datawrapper-chart-aM7Sp" src="https://datawrapper.dwcdn.net/aM7Sp/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
 
+<br>
+<iframe title="TOP 10 Emisión C02 en 2018" aria-label="Bar Chart" id="datawrapper-chart-Sjs9q" src="https://datawrapper.dwcdn.net/Sjs9q/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="362"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
+</script>
+<br>
+
 <h1> AG2 </h1>
 <a href="https://ibb.co/V3kMQLv"><img src="https://i.ibb.co/zNtP7mS/Dashboard.png" alt="Dashboard" border="0"></a>
