--- a/index.html
+++ b/index.html
@@ -29,3 +29,9 @@ href="https://github.com/HAROLDOROZCO">https://github.com/HAROLDOROZCO</a>
 
 <h1> AG2 </h1>
 <a href="https://ibb.co/V3kMQLv"><img src="https://i.ibb.co/zNtP7mS/Dashboard.png" alt="Dashboard" border="0"></a>
+
+
+<h1> Actividad Guiada 3</h1>
+
+Google Colab: <a 
+href="https://colab.research.google.com/drive/1d6K_2kHcJqAbzbCTbnjkcLRXajDuxwnN?usp=sharing">https://colab.research.google.com/drive/1d6K_2kHcJqAbzbCTbnjkcLRXajDuxwnN?usp=sharing</a>
