--- a/index.html
+++ b/index.html
@@ -34,3 +34,12 @@ href="https://github.com/HAROLDOROZCO">https://github.com/HAROLDOROZCO</a>
 
 Google Colab: <a 
 href="https://colab.research.google.com/drive/1d6K_2kHcJqAbzbCTbnjkcLRXajDuxwnN?usp=sharing">https://colab.research.google.com/drive/1d6K_2kHcJqAbzbCTbnjkcLRXajDuxwnN?usp=sharing</a>
+
+<head>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></
+script>
+</head>
+
+<h2> Gráfico de Columnas con D3Plus</h2><div id="viz1"></div>
