--- a/index.html
+++ b/index.html
@@ -42,4 +42,7 @@ href="https://colab.research.google.com/drive/1d6K_2kHcJqAbzbCTbnjkcLRXajDuxwnN?
 script>
 </head>
 
-<h2> Gráfico de Columnas con D3Plus</h2><div id="viz1"></div>
+<h2> Gráfico de Columnas con D3Plus</h2>
+<div id="viz1"></div>
+<h2> Reutilizar código. Barras</h2>
+<div id="viz2"></div>
