--- a/index.html
+++ b/index.html
@@ -46,3 +46,5 @@ script>
 <div id="viz1"></div>
 <h2> Reutilizar código. Barras</h2>
 <div id="viz2"></div>
+<h2>Caja y Bigotes o Burbujas</h2>
+<div id="viz3"></div>
